hotfix: Update Error in Background with DALL.E AI prompt length